# interpolator

./: .env.example  .gitignore  DEPLOYMENT.md  QUICK_START.md  README.md  create_sample_dataset.py  docker-compose.yml  launch.sh  sample_dataset.pkl
backend/: .env.example  Dockerfile  inspect_model.py  pyproject.toml  start_server.sh
backend/artifacts/: latest.joblib
backend/docs/source/: api.rst  deployment.rst  index.rst  performance.rst  tests.rst  usage.rst
backend/fivedreg/: benchmark.py  benchmark_results.json  interpolator.py  main.py  plot_profiling.py  profile_training.py
backend/fivedreg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/fivedreg/api/: state.py
backend/fivedreg/data/: __init__.py  convert.py  loader.py
backend/fivedreg/models/: __init__.py  mlp.py
backend/fivedreg/utils/: __init__.py  train.py
backend/tests/: test_api.py  test_data_loader.py  test_interpolator.py  test_model.py  test_utils.py
frontend/: Dockerfile
frontend/src/app/: globals.css
frontend/src/app/predict/: page.tsx
frontend/src/app/train/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/lib/: api.ts
interpolator/: DEPLOYMENT.md  GETTING_STARTED.md  README.md  docker-compose.yml
interpolator/backend/docs/: build_docs.sh
interpolator/backend/docs/source/: conf.py  deployment.rst  usage.rst
interpolator/backend/fivedreg/: __init__.py  benchmark.py  interpolator.py  main.py  plot_profiling.py  profiling_results.json
interpolator/backend/fivedreg.egg-info/: PKG-INFO  requires.txt
interpolator/backend/fivedreg/api/: __init__.py
interpolator/backend/fivedreg/data/: loader.py
interpolator/backend/tests/: test_model.py
interpolator/frontend/src/app/: layout.tsx  page.tsx
interpolator/scripts/: README.md  build-docs.sh  docker-cleanup.sh  profile-detailed.sh  run-benchmark.sh
scripts/: README.md  docker-logs.sh  run-profiling.sh  setup-dev.sh  test-pipeline.sh
(+3 files in other folders)
