[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fivedreg"
version = "0.1.0"
description = "5D dataset interpolator: data loading, training, inference"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "joblib>=1.4",
  "python-multipart>=0.0.9" # file uploads
]

[project.optional-dependencies]
dev = ["pytest>=8.2","pytest-cov>=5.0","ruff>=0.6","mypy>=1.10","httpx>=0.27"]
docs = ["sphinx>=7.3","sphinx-autodoc-typehints>=2.1","furo>=2024.8.6"]
bench = ["memory-profiler>=0.61","psutil>=6.0"]

[tool.ruff]
line-length = 100