[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fivedreg"
version = "0.1.0"
description = "5D dataset interpolator: data loading, training, inference"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "Barbara Koch", email = "bk489@cam.ac.uk" }]

dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "joblib>=1.4",
  "python-multipart>=0.0.9" # file uploads
]

[project.optional-dependencies]
dev = ["pytest>=8.2","pytest-cov>=5.0","ruff>=0.6","mypy>=1.10","httpx>=0.27"]
docs = ["sphinx>=7.3"]  # All extensions used (autodoc, napoleon, autosummary, viewcode) are built-in
bench = ["memory-profiler>=0.61","psutil>=6.0","matplotlib>=3.8"]

[tool.setuptools]
packages = ["fivedreg", "fivedreg.api", "fivedreg.data"]

[tool.setuptools.package-data]
fivedreg = ["*.py"]

[tool.ruff]
line-length = 100